--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,12 @@
-<h1>Home controller</h1>
+<section class="contributions-section">
+  <h1>Github Contributions</h1>
+  <section class="members-container">
+    <% @users.each do |user| %>
+      <article class="member-card">
+        <img src="<%= user.avatar_url =%>" class="member-picture"/>
+        <%= link_to "@#{user.login}", "https://github.com/#{user.login}", class: "member-name", target: "_blank" =%>
+        <h3 class="total-contributions"><%= user.contributions.count %></h3>
+      </article>
+    <% end %>
+  </section>
+</section>
