--- a/app/assets/stylesheets/components/_member-card.scss
+++ b/app/assets/stylesheets/components/_member-card.scss
@@ -2,41 +2,42 @@
   display: flex;
   flex-flow: row wrap;
 
-  .member-card {
-    align-items: center;
-    box-shadow: 0 5px 20px 0 rgba(69,79,91,0.2);
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 calc(50% - 40px);
-    justify-content: center;
-    margin: 20px;
-    transition: box-shadow 300ms ease;
+  .member-picture {
+    border-radius: 50%;
+    margin-top: 20px;
+    max-width: 100px;
+  }
 
-    @media only screen and (min-width: 1024px) {
-      flex: 0 0 calc(25% - 40px);
-    }
+  .member-name {
+    color: #000;
+    display: block;
+    font-size: 1rem;
+    font-weight: 700;
+    margin-top: 10px;
+    text-decoration: none;
 
     &:hover {
-      box-shadow: 0 11px 54px 0 rgba(69,79,91,0.3);
+      text-decoration: underline;
     }
+  }
+}
 
-    .member-picture {
-      border-radius: 50%;
-      margin-top: 20px;
-      max-width: 100px;
-    }
+.member-card {
+  align-items: center;
+  box-shadow: 0 5px 20px 0 rgba(69,79,91,0.2);
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 calc(50% - 40px);
+  justify-content: center;
+  margin: 20px;
+  padding: 25px 0;
+  transition: box-shadow 300ms ease;
 
-    .member-name {
-      color: #000;
-      display: block;
-      font-size: 1rem;
-      font-weight: 700;
-      margin-top: 10px;
-      text-decoration: none;
+  @media only screen and (min-width: 1024px) {
+    flex: 0 0 calc(25% - 40px);
+  }
 
-      &:hover {
-        text-decoration: underline;
-      }
-    }
+  &:hover {
+    box-shadow: 0 11px 54px 0 rgba(69,79,91,0.3);
   }
 }
