--- a/app/assets/stylesheets/sections/_contributions.scss
+++ b/app/assets/stylesheets/sections/_contributions.scss
@@ -1,3 +1,66 @@
 .contributions-section {
   text-align: center;
+
+  h1 a {
+    color: #000;
+    text-decoration: none;
+  }
+}
+
+.contributions-container {
+  padding: 0 30px;
+
+  .project-title {
+    font-size: 24px;
+  }
+
+  .contribution-container {
+    text-align: left;
+  }
+
+  .contribution-header {
+    border: 1px solid #c0d3eb;
+    font-size: 16px;
+    max-width: 600px;
+    padding: 15px 15px;
+
+    a {
+      color: #0000ee;
+      text-decoration: underline;
+    }
+  }
+
+  .pull-request-description {
+    background-color: white;
+    border-radius: 3px;
+    border: 1px solid #d1d5da;
+    display: none;
+    margin-top: 10px;
+    max-width: 600px;
+    padding: 5px 15px;
+
+    &.expanded {
+      display: block;
+    }
+
+    &-button {
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+      font-weight: 600;
+      outline: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+
+      &.expanded {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .contribution-item {
+    margin-bottom: 30px;
+  }
 }
