--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -3,7 +3,7 @@
     <a href="/">Github Contributions</a>
   </h1>
   <h2>
-    <%= @user.login =%> has contributded <%= @user.contributions.count =%> times in <%= @projects.count =%> projects
+    <%= @user.login =%> has contributed <%= @user.contributions.count =%> times in <%= @projects.count =%> projects
   </h2>
   <section class="contributions-container">
     <% @projects.each do |project| %>
