--- a/app/assets/stylesheets/components/_current-user.scss
+++ b/app/assets/stylesheets/components/_current-user.scss
@@ -11,7 +11,7 @@
   }
 
   .github-user-link {
-    color: #000;
+    color: $white;
     display: block;
     font-weight: 700;
     margin-top: 15px;
