--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,6 +1,6 @@
 <section class="contributions-section">
   <h1>
-    <a href="/">Github Contributions</a>
+    Contributions for <%= @project.name =%>
   </h1>
   <section class="contributions-container">
     <article class="contribution-container">
